# Adobe-Creative-Automation-Pipeline-POC

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
creative_pipeline/: __init__.py  agent.py  schemas.py
creative_pipeline/.adk/: session.db
creative_pipeline/sub_agents/asset_manager/: agent.py
creative_pipeline/sub_agents/brand_checker/: __init__.py  agent.py
creative_pipeline/sub_agents/brand_loader/: __init__.py  agent.py
creative_pipeline/sub_agents/brief_parser/: __init__.py  agent.py
creative_pipeline/sub_agents/creative_composer/: __init__.py  agent.py
creative_pipeline/tools/: color_analyzer.py  contrast.py  dropbox_uploader.py  file_utils.py  image_gen.py  imagen_tool.py  llm_factory.py  openai_image_tool.py  pillow_composer.py  qc_rules.py  storage_adapter.py
future-roadmap/: computer-vision-roadmap  observability-roadmap.md  scalability-roadmap.md  security-roadmap.md  ui-roadmap
inputs/brand/: guidelines.yaml
inputs/campaign_briefs/: summer_refresh_2025.yaml
scripts/: fetch_fonts.sh  rerender_existing_sources.py  run_pipeline.py
tests/: test_art_director_pass.py  test_brief_flag_fidelity.py  test_clearance_and_scaling.py  test_color_analyzer.py  test_composer_contrast_aware.py  test_composition_balance.py  test_demo_polished_contract.py  test_dropbox_uploader.py  test_dropbox_uploader_agent.py  test_focal_and_line_count.py  test_human_readable_report.py  test_image_gen_dispatch.py  test_input_contract.py  test_layout_contract.py  test_legal_checker.py  test_llm_factory.py  test_logo_badge_quality.py  test_natural_composition.py  test_output_locales.py  test_per_aspect_typography.py  test_pillow_composer.py  test_qc_contrast.py  test_readability_treatments.py  test_rendered_bbox_clearance.py  test_text_zone_scoring.py
(+10 files in other folders)
