[project]
name = "creative-pipeline"
version = "0.1.0"
description = "Creative Automation Pipeline — multi-agent ADK system for social-ad creatives"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=1.0",
    "google-genai>=1.0",
    "litellm>=1.50",
    "openai>=1.50",
    "pydantic>=2.0",
    "pillow>=10.0",
    "opencv-python>=4.8",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["creative_pipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
